# loopfarm

./: .gitignore  MIGRATION.md  README.md  pyproject.toml
docs/: implementation-state-machine.md  phase-plan.md  source-layout.md
monitor/: README.md  package.json  tsconfig.json
monitor/src/: html.ts  jsonl.ts  responses.ts  router.ts  server.ts  store.ts  types.ts
monitor/test/: events.test.ts  store.test.ts
prompts/: INCREMENTAL.md  README.md  writing.md
prompts/implementation/: architecture.md  backward.md  documentation.md  forward.md  planning.md
prompts/research/: backward.md  curation.md  planning.md  research.md
src/inshallah/: cli.py  dag.py  events.py  fmt.py  forum_store.py  (+1 more)
tests/: conftest.py  test_backend_argv.py  test_backend_registry.py  test_base_formatter.py  test_cli_defaults.py  test_cli_dispatch.py  test_cli_docs.py  test_cli_help.py  test_cli_init.py  test_cli_issue_forum_ux.py  test_cli_main.py  test_cli_output_mode.py  test_cli_programs.py  test_cli_roles.py  test_dag.py  test_discord_commands.py  test_events.py  test_fmt.py  test_format_claude.py  test_format_codex.py  test_format_kimi.py  test_format_main.py  test_format_utils.py  test_issue_dag_events.py  test_issue_dag_execution.py  test_issue_dag_orchestrator.py  test_issue_dag_runner.py  test_issue_forum_store.py  test_loop_plan.py  test_monitor.py  test_phase_contract.py  test_prompt.py  test_run_loop_events.py  test_runner_forward_report.py  test_runner_prompt_context.py  test_runtime_config.py  test_session_store.py  test_spec.py  test_stream_events.py  test_stream_helpers.py  (+2 more)
(+83 files in other folders)
