[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "loopfarm"
version = "0.1.0"
description = "Loopfarm planning/forward/backward loop runner"
requires-python = ">=3.11"
dependencies = ["rich>=13.7.1"]

[project.scripts]
loopfarm = "loopfarm.cli:main"
loopfarm-format = "loopfarm.format_stream:main"
loopfarm-monitor = "loopfarm.monitor:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/loopfarm"]
