[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "loopfarm"
version = "0.1.0"
description = "DAG-based loop runner for agentic workflows"
requires-python = ">=3.11"
dependencies = ["rich>=13.7.1", "pyyaml>=6.0"]

[project.scripts]
loopfarm = "loopfarm.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/loopfarm"]
